# daytrade

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
configs/: default.yaml  watchlist.yaml
docs/: REAL-MONEY-RISKS.md  REMOTE-ACCESS.md  SAFETY.md  STRATEGY-IMPROVEMENT-PLAN.md
scripts/: run-dashboard.sh
src/daytrade/: __init__.py  __main__.py  approval.py  demo.py  pipeline.py  runtime.py
src/daytrade/accounting/: __init__.py  ledger.py  tax.py
src/daytrade/backtest/: __init__.py  engine.py
src/daytrade/cli/: __init__.py  main.py
src/daytrade/config/: __init__.py  loader.py  schema.py
src/daytrade/dashboard/: __init__.py  app.py  data.py
src/daytrade/exchanges/: __init__.py  base.py  consensus.py  credentials.py  mock.py  provider.py  public.py  sandbox.py
src/daytrade/features/: __init__.py  pipeline.py
src/daytrade/fusion/: __init__.py  engine.py
src/daytrade/indicators/: __init__.py  core.py  engine.py  frame.py
src/daytrade/labels/: __init__.py  generate.py
src/daytrade/macro/: __init__.py  engine.py  (+3 more)
tests/: conftest.py  test_accounting.py  test_backtest.py  test_calibration.py  test_config.py  test_dashboard.py  test_demo.py  test_exchanges.py  test_features.py  test_fusion.py  test_indicators.py  test_killswitch.py  test_leakage.py  test_learning.py  test_macro.py  test_meta_label.py  test_microstructure.py  test_ml.py  test_models.py  test_observatory.py  test_paper.py  test_real_feed.py  test_regime_gate.py  test_research.py  test_risk.py  test_safety.py  test_sandbox.py  test_validation.py  test_watchlist.py
(+53 files in other folders)
